[metadata]
name = jsonasobj2
url = https://github.com/hsolbrig/jsonasobj2
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = JSON as python objects - version 2
license = CC0 1.0 Universal
python-requires = >=3.6
description = JSON as python objects version 2
long-description = an extension to the core python json library that treats name/value pairs as first class attributes whenever possible
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    json

[files]
packages =
    jsonasobj2


